--- a/Expense-Tracker/backend/requirements.txt
+++ b/Expense-Tracker/backend/requirements.txt
@@ -1,9 +1,12 @@
 asgiref==3.9.1
+bleach==6.2.0
 Django==5.2.6
 django-cors-headers==4.8.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
+packaging==25.0
 PyJWT==2.10.1
 python-decouple==3.8
 sqlparse==0.5.3
 tzdata==2025.2
+webencodings==0.5.1
