--- a/Mini-Ecommerce/frontend/package.json
+++ b/Mini-Ecommerce/frontend/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.3",
+    "react-slideshow-image": "^4.3.2",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
